# GoogleTranslate

./: pyproject.toml  readme.md
src/: main.py
src/tran/: google.py
